# chatgpt-complex-net

./: .gitignore  CLAUDE.md  Makefile  README.md  REDESIGN.md  TODO.md  __init__.py  cli.py  config.example.yaml  fix_embeddings.py  pyproject.toml  rec_conv.py  requirements-dev.txt  semnet_api.py  setup.py
embedding/: chunking.py  llm_embedding_model.py  llm_providers.py  tfidf_memory_efficient.py
integrations/: __init__.py  base.py  loader.py
integrations/bookmarks/: __init__.py  chrome.py
integrations/chatlog/: __init__.py  base.py  json.py  markdown.py
integrations/playlist/: __init__.py  m3u.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_utils.py
tests/test_core/: test_node_edge.py  test_registry.py
tests/test_data/: test_message_utils.py
tests/test_embedding/: test_chunking.py  test_llm_providers.py  test_tfidf.py  test_utils.py
tests/test_graph/: test_edge_utils.py  test_export_utils.py  test_normalization.py
tests/test_integrations/: test_chatlog_base.py  test_loader.py
